Correct pagination right side shifting

--- a/src/container/Jobs/Job.scss
+++ b/src/container/Jobs/Job.scss
@@ -152,11 +152,7 @@ button {
 //   position: relative;
 // }
 .pagination__block {
-  // position: absolute;
-  // bottom: 0%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
-  margin-top: 10vh;
+  margin: 5vh 0;
   display: flex;
   justify-content: center;
   align-items: center;
