--- a/src/index.scss
+++ b/src/index.scss
@@ -18,16 +18,7 @@ code {
   justify-content: center;
   align-items: center;
   width: 100%;
-  // padding-top: 50vh;
-  // position: fixed;
-  // bottom: 0;
-  // // right: 50%;
-  // list-style: none;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  /* margin-bottom: 50px; */
-  // padding-bottom: 50px;
+  padding: 0;
 }
 .pageNumbers li {
   padding: 5px 10px;
